8/18/11 encapsulate L&F of "Reset All" button, disable confirmation
8/17/11 initialize view properties in constructor, so that Reset All works properly
8/17/11 for triatomic molecule, make molecular dipole on by default, bond dipole off by default
8/17/11 put 2D isosurfaces behind molecule, so that it's possible to change bond angle and rotate isosurface
8/17/11 delete periodic table, replace with placeholder for electronegativity table
8/17/11 change "Isosurface" label to "Surface", also change internally
8/17/11 change request: pause animation of E-field alignment when an EN slider is being dragged
8/17/11 change request: when changing bond angle, move the atom that's being dragged to the front
# 0.00.10 (55361) Aug 16, 2011
8/16/11 replace PolarImmutableVector2D with ImmutableVector.parseMagnitudeAndAngle
8/16/11 add rotate cursor, for discussion
8/16/11 use bond dipole instead of deltaEN in diatomic molecule and bond type indicator
8/16/11 adjust canvas layouts
8/16/11 change rendering order of scenegraph so that molecule is on top
8/16/11 general alignment of molecular dipole with E-field so that it's handled in the base class model
8/16/11 align triatomic molecular dipole with E-field
8/16/11 add bond angle manipulation
8/16/11 fixed transforms in molecular dipole view
8/16/11 fix rendering order of scenegraphs
8/16/11 add bond dipole to model
8/16/11 add partial charge to atom model
8/16/11 restore molecular dipole
# 0.00.09 (55303) Aug 16, 2011
8/16/11 dev version for discussion at Chem meeting
8/16/11 temporarily disable molecular dipole because it's currently incorrect
8/15/11 checked in a version of "real molecules" control that uses PComboBox instead of ComboBoxNode, #2982
8/15/11 tweak molecular dipole interface and fields
8/15/11 make molecule location a simple field, doesn't need to be a Property
8/15/11 intermediate implementation of molecular dipole model and view, not functional yet